apps/healthmap-worldhealthmap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worldhealthmap-ingress
  namespace: worldhealthmap
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - worldhealthmap.mlthrive.com
      secretName: worldhealthmap-mlthrive-tls

  rules:
    - host: worldhealthmap.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: worldhealthmap-service-frontend
                port:
                  number: 80
